# AsterHoverVis

./: README.md  Run_AsterHoverVis.applescript  Run_AsterHoverVis.command  pyproject.toml  requirements.txt
AsterHoverVis/: README.md
AsterHoverVis/Run_AsterHoverVis.app/Contents/MacOS/: applet
AsterHoverVis/Run_AsterHoverVis.app/Contents/Resources/: AsterHoverVis.icns
AsterHoverVis/data/sbdb_cache/: 99942_sbdb.json
AsterHoverVis/data/sun_geometry_cache/: 403c2111ada932aa.json  a9076d10e6ac44de.json  c82383954cb46bb1.json
AsterHoverVis/smallbodyvis/core/: __init__.py  mesh.py  sbdb_client.py  visibility.py
AsterHoverVis/smallbodyvis/services/: __init__.py
AsterHoverVis/smallbodyvis/ui/: dialogs.py
Run_AsterHoverVis.app/Contents/: Info.plist
Run_AsterHoverVis.app/Contents/Resources/Scripts/: main.scpt
Run_AsterHoverVis.app/Contents/_CodeSignature/: CodeResources
assets/: jpl_apophis_earth_sun_2029_flyby_10min.npz
data/sbdb_cache/: 67p_sbdb.json
data/sun_geometry_cache/: 01aeab3d057810e8.json  3d9e709652460909.json  41c9942d8e134d98.json  727f14d48fd8a8be.json  f0db3c4007b503c6.json
smallbodyvis/: __init__.py  app.py
smallbodyvis/core/: constants.py  models.py  sun_geometry.py  trajectory.py
smallbodyvis/services/: simulation_runner.py
smallbodyvis/ui/: __init__.py  main_window.py
