[project]
name = "asterhovervis"
version = "0.0.1"
description = "Asteroid flyby hovering-orbit and visibility visualization."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "PySide6>=6.5",
  "pyvista>=0.43",
  "pyvistaqt>=0.11",
  "pyqtgraph>=0.13",
]

[project.scripts]
asterhovervis = "smallbodyvis.app:main"
smallbodyvis = "smallbodyvis.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["smallbodyvis*"]
